--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,8 @@
             <li><a id="menu_deletar">Deletar</a></li>
         </ul>
         <br>
+        <span>Olá <b>{{ usuario }}</b></span>
+        <br>
         <a href="/logout">Sair</a>
         <br>
         <span style="color:red;"><b>{{ status }}</b></span>  
